--- a/Primeiro_Blog/style/style.css
+++ b/Primeiro_Blog/style/style.css
@@ -30,6 +30,7 @@ body {
 #principal {
     width: 920px;
     margin: 0 auto;
+    padding: 15px;
 }
 
 #menu-lateral, #postagens {
@@ -47,12 +48,6 @@ body {
     float: right;
 }
 
-.postagem {
-    padding: 20px;
-    margin-bottom: 20px;
-    background: white;
-}
-
 #rodape {
     clear: both;
     text-align: center;
@@ -60,6 +55,31 @@ body {
     background: #ccc;
 }
 
+.data-post {
+    font-size: 0.8em;
+    border-bottom: 1px solid #f4f4f4;
+    padding-bottom: 10px;
+    margin-bottom: 10px ;
+    display: block;
+}
+
+.postagem {
+    padding: 20px;
+    margin-bottom: 20px;
+    background: white;
+}
+
+.conteudo-lateral {
+    background: white;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.postagem-lateral {
+    font-size: 0.8em;
+    padding: 5px;
+    border-bottom: 1px dotted #CCC;
+}
 /*
 *** Formatação Menu ***
 */
@@ -69,13 +89,23 @@ a {
 }
 
 a:link, a:visited {
+    color: #f7b600;
+}
+
+a:hover {
+    text-decoration: underline;
+    
+}
+
+#cabeçalho a:link, #cabeçalho a:visited {
     color: #FFFFFF;
     padding: 8px 12px;
 }
 
-a:hover {
+#cabeçalho a:hover {
     color: #f7b600;
-    background: #FFFFFF
+    background: #FFFFFF;
+    text-decoration: none;
 }
 
 /*
@@ -85,6 +115,16 @@ a:hover {
 h1 {
     color: #4e4e4e;
     font-size: 2.5em;
+}
+
+h2 {
+    color: #f7b600;
+}
+
+h3 {
+    color: #565656;
+    background: #CCC;
+    padding: 5px;
 }
 
 .branco {
